--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,16 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.core.MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.core.LoginActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.core.LoginActivity"
+            android:exported="true">
         </activity>
     </application>
 
