--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.5.1"
 datastorePreferences = "1.1.1"
 fragmentKtx = "1.8.1"
+glide = "5.0.0-rc01"
 gson = "2.11.0"
 hiltAndroid = "2.51.1"
 kotlin = "1.9.0"
@@ -18,6 +19,7 @@ navigationFragmentKtx = "2.7.7"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
 ksp = "1.9.22-1.0.16"
+swiperefreshlayout = "1.1.0"
 threetenabp = "1.2.1"
 squareupLoggingInterceptor = "4.11.0"
 timber = "5.0.1"
@@ -29,7 +31,9 @@ androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref
 androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationFragmentKtx" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
