--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -149,6 +149,11 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>${jakarta-persistence.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
     </dependencies>
     <repositories>
     <repository>
