--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -207,6 +207,11 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
+                         <path>
+              <groupId>jakarta.persistence</groupId>
+              <artifactId>jakarta.persistence-api</artifactId>
+              <version>${jakarta-persistence.version}</version>
+            </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
