--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         </activity>
         <activity
             android:name=".ui.core.MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
 
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
