--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 application.properties
+**/src/main/resources/firebase-service-account.json
+
 
 ### STS ###
 .apt_generated
