--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ materialCalendarview = "2.0.1"
 media3Exoplayer = "1.3.1"
 navigationFragmentKtx = "2.7.7"
 okhttp = "4.12.0"
+onnxruntimeAndroid = "1.18.0"
 pagingRuntime = "3.3.1"
 retrofit = "2.11.0"
 ksp = "1.9.22-1.0.16"
@@ -66,6 +67,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 material-calendarview = { module = "com.github.prolificinteractive:material-calendarview", version.ref = "materialCalendarview" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+onnxruntime-android = { module = "com.microsoft.onnxruntime:onnxruntime-android", version.ref = "onnxruntimeAndroid" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 squareup-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareupLoggingInterceptor" }
