<feat> [be] docker-compose파일 추가

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 application.properties
 **/src/main/resources/firebase-service-account.json
-
+.env
 
 ### STS ###
 .apt_generated
