--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,6 +32,10 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
@@ -171,6 +175,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.openvidu</groupId>
+      <artifactId>openvidu-java-client</artifactId>
+      <version>2.20.0</version>
     </dependency>
   </dependencies>
   <repositories>
