--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,8 @@ onnxruntimeAndroid = "1.18.0"
 pagingRuntime = "3.3.1"
 retrofit = "2.11.0"
 ksp = "1.9.22-1.0.16"
+streamWebrtcAndroid = "1.1.3"
+streamWebrtcAndroidUi = "1.1.3"
 swiperefreshlayout = "1.1.0"
 threetenabp = "1.2.1"
 squareupLoggingInterceptor = "4.11.0"
@@ -71,6 +73,8 @@ material-calendarview = { module = "com.github.prolificinteractive:material-cale
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 onnxruntime-android = { module = "com.microsoft.onnxruntime:onnxruntime-android", version.ref = "onnxruntimeAndroid" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+stream-webrtc-android = { module = "io.getstream:stream-webrtc-android", version.ref = "streamWebrtcAndroid" }
+stream-webrtc-android-ui = { module = "io.getstream:stream-webrtc-android-ui", version.ref = "streamWebrtcAndroidUi" }
 threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 squareup-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareupLoggingInterceptor" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
