--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -182,6 +182,13 @@
       <artifactId>openvidu-java-client</artifactId>
       <version>2.20.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.2.2</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
