--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -55,6 +55,18 @@ services:
     volumes:
       - ./app:/app
 
+  jenkins:
+    image: jenkins/jenkins:jdk17
+    container_name: jenkins
+    ports:
+      - "9090:8080"
+      - "50000:50000"
+    volumes:
+      - /var/jenkins_home:/var/jenkins_home
+      - /home/ubuntu/yoganavi:/home/ubuntu/yoganavi
+    depends_on:
+      - app
+
 volumes:
   mysql_data:
   redis_data:
